# sill

./: .hgignore  CMakeLists.txt  Doxyfile  Makefile  README  configure-mingw.bat  todo.txt
src/prl/: CMakeLists.txt  assignment.hpp  boost_unordered_utils.hpp  copy_ptr.hpp  functional.hpp  global.hpp  macros_undef.hpp  mainpage.hpp  process.hpp  stl_concepts.hpp  stl_io.hpp  variable.hpp
src/sill/: CMakeLists.txt  assignment.hpp  boost_unordered_utils.hpp  copy_ptr.hpp  functional.hpp  global.hpp  macros_def.hpp  macros_undef.hpp  mainpage.hpp  process.hpp  stl_concepts.hpp  stl_io.hpp  subpage_concepts.hpp  variable.hpp
tests/: .cvsignore  CMakeLists.txt  Makefile  copy_ptr.cpp  map.cpp  predicates.hpp  set.cpp  tr1_test.cpp  tr1_unordered_map.cpp
tests/argument/: CMakeLists.txt  array_domain.cpp  basic_domain.cpp  domain.cpp  finite_assignment_iterator.cpp  process.cpp  variable.cpp  vector_assignment.cpp
tests/base/: CMakeLists.txt  array_domain.cpp  assignment.cpp  bounded_domain.cpp  domain.cpp  process.cpp  variable.cpp  variable_type_group.cpp  variable_type_groups.cpp
tests/data/: 20x20.net  3x3.net  6x6.net  alarm-100-fold-1.txt.symbolic.stat  circle10x10.txt  circle20x20.txt  circle2x2.txt  circle3x3.txt  image_fixedsize.txt  image_test.sum  image_test.txt  image_test2.sum  image_test2.txt  image_varsize.txt  jtest.sum  jtest.txt.symbolic  jtest2.sum  jtest2.txt.symbolic  mixture.sum  mixture.txt  mixture1.txt  mixture2.txt  spam.sum  spam.txt
tests/datastructure/: CMakeLists.txt  dense_table.cpp  mutable_queue.cpp  set_index.cpp  sparse_table.cpp  table.cpp  vector_map.cpp
tests/distributed/: CMakeLists.txt  Makefile  bandwidth_sort.cpp  bandwidth_test_client.cpp  bandwidth_test_server.cpp  check_port.cpp  chord_lookup.cpp  chord_predecessor.cpp  intelhosts10.txt  intelhosts16.txt  localhosts10.txt  localhosts2.txt  parallel_chord_lookup.cpp  run_chord_averaging.py  run_chord_pairwise_averaging.py  run_list_averaging.py  run_pairwise_averaging.py  string_client.cpp  string_server.cpp  test_chord_averaging.cpp  test_chord_pairwise_averaging.cpp  test_chord_random_host.cpp  test_list_averaging.cpp  test_pairwise_averaging.cpp  test_pushsum_averaging.cpp  values.txt
tests/factor/: CMakeLists.txt  Makefile  any_factor.cpp  array_factor.cpp  canonical_array.cpp  canonical_gaussian.cpp  canonical_table.cpp  commutative_semiring.cpp  constant_factor.cpp  decomposable_fragment.cpp  fragment.cpp  gaussian_crf_factor.cpp  gaussian_crf_factor_test.cpp  gaussian_crf_factor_timing.cpp  gaussian_factors.cpp  gaussian_sampling.cpp  gaussian_sampling_test.cpp  hybrid.cpp  mixture.cpp  mixture_sampling_test.cpp  moment_gaussian.cpp  moment_matching.cpp  nonlinear_gaussian.cpp  predicates.hpp  probability_array.cpp  probability_table.cpp  random_crf_factor_functor.cpp  random_mixture_crf_factor_functor.cpp  random_mixture_functor.cpp  random_moment_gaussian_functor.cpp  serialization.cpp  serialization2.cpp  softmax.cpp  table_factor.cpp  table_factor2.cpp  table_factor_comparison.cpp  table_factor_sampling_test.cpp
tests/geometry/: ralign.cpp
tests/graph/: CMakeLists.txt  Makefile  bipartite_graph.cpp  cluster_graph.cpp  constrained_triangulation.cpp  directed_graph.cpp  directed_multigraph.cpp  graph_memory.cpp  graph_serialization.cpp  graph_traversal.cpp  predicates.hpp  region_graph.cpp  triangulation.cpp  undirected_graph.cpp
tests/inference/: CMakeLists.txt  Makefile  belief_propagation.cpp  bethe_bp.cpp  commutative_semiring.cpp  denoise.cpp  gbp.cpp  gibbs_sampler.cpp  image_segmentation.cpp  junction_tree_inference.cpp  kikuchi.cpp  markov_logic.cpp  mln_cuts.cpp  protein_cuts.cpp  protein_inference.cpp  taueps_quant.cpp  variable_elimination.cpp
tests/iterator/: CMakeLists.txt  pointer_iterator.cpp  subset_iterator.cpp
tests/learning/: CMakeLists.txt  Makefile  chow_liu.cpp  chow_liu_test.cpp  decomposable_iterator.cpp  em.cpp  em_mog.cpp  learn_crf_factor.cpp  learn_gaussian_crf_factor.cpp  structure_search.cpp
tests/localization/: Makefile  cov.cpp  normcut.cpp  ralign.cpp  real-hall-100.txt  result.m  small-graph.txt  test.txt
tests/math/: CMakeLists.txt  Makefile  functions.cpp  gdl.cpp  geometry.cpp  logarithmic.cpp  multinomial_distribution.cpp  quaternion.cpp  softmax.cpp  suitesparse_test.cpp  test_matrix.cpp  test_vector.cpp
tests/model/: CMakeLists.txt  Makefile  basic_fixture.hpp  bayes_markov_graph.cpp  bayes_markov_model.cpp  bayesian_markov_graph.cpp  bayesian_markov_network.cpp  bayesian_network.cpp  cluster_graph.cpp  cluster_graph_model.cpp  crf_graph_test.cpp  decomposable.cpp  decomposable_sampling_test.cpp  factor_graph.cpp  factor_graph_model.cpp  factor_list_model.cpp  junction_tree.cpp  learnt_decomposable.cpp  learnt_junction_tree.cpp  pairwise_markov_network.cpp  predicates.hpp  random.cpp
tests/mpi/: CMakeLists.txt  cpi.c  mpi_broadcast.cpp  mpi_line_aggregate.cpp  mpi_send_receive.cpp  mpi_state_manager_denoise.cpp  mpi_state_manager_tests.cpp  mpi_sync_denoise.cpp  mpi_tests.cpp  mpi_tree_aggregate.cpp  mpilogtest.cpp
tests/optimization/: CMakeLists.txt  conjugate_gradient_test.cpp  gradient_descent_test.cpp  lbfgs_test.cpp  line_search_test.cpp  quadratic_objective.hpp  stochastic_gradient_test.cpp
tests/parsers/: CMakeLists.txt  aceblf2alchemy.py  alchemy.cpp  bn_parser.cpp  decomposable_parser.cpp  elidannet2alchemy.py  (+7 more)
timings/: CMakeLists.txt  Makefile  array.cpp  array_vs_table.cpp  array_vs_vector.cpp  boost_function.cpp  boost_unordered_utils.cpp  boosters.cpp  chow_liu.cpp  chow_liu2.cpp  compute_message.cpp  dataset_timing.cpp  dense_table.cpp  forward_range.cpp  gaussian_crf_factor.cpp  gdl_enum.cpp  gibbs_sampler_timing.cpp  itpp_vs_ublas.cpp  junction_tree.cpp  logarithmic.cpp  math_random.cpp  moment_gaussian_mle.cpp  serialization.cpp  serialization_experiment.cpp  softmax_timing.cpp  sparse_linear_algebra.cpp  table.cpp  table_factor.cpp  time_chow_liu.cpp  time_message_discrete.cpp  time_table_factor.cpp  triangulation.cpp  variant_vs_int.cpp  virtual_function.cpp  virtual_function_timing.cpp
(+2001 files in other folders)
