link_libraries(${PRL_LIBRARIES} ${Boost_LIBRARIES})

add_executable(array array.cpp)
add_executable(array_vs_vector array_vs_vector.cpp)
add_executable(boost_function boost_function.cpp)                             
add_executable(boosters boosters.cpp)
add_executable(dataset_timing dataset_timing.cpp)
add_executable(dense_table_timing dense_table.cpp)
add_executable(forward_range forward_range.cpp)
add_executable(gdl_enum gdl_enum.cpp)
add_executable(itpp_vs_ublas itpp_vs_ublas.cpp)
add_executable(junction_tree junction_tree.cpp)
add_executable(logarithmic logarithmic.cpp)
add_executable(math_random math_random.cpp)
add_executable(serialization serialization.cpp)
add_executable(time_chow_liu time_chow_liu.cpp)
add_executable(time_table_factor time_table_factor.cpp)
add_executable(time_message_discrete time_message_discrete.cpp)
add_executable(triangulation triangulation.cpp)
add_executable(variant_vs_int variant_vs_int.cpp)
add_executable(virtual_function_timing virtual_function_timing.cpp)
