link_libraries(sill ${Boost_LIBRARIES})

add_executable(boost_function boost_function.cpp)
add_executable(boost_unordered_utils boost_unordered_utils.cpp)
add_executable(boosters boosters.cpp)
add_executable(chow_liu_timing chow_liu.cpp)
add_executable(chow_liu_timing2 chow_liu2.cpp)
add_executable(compute_message compute_message.cpp)
add_executable(dataset_timing dataset_timing.cpp)
add_executable(dense_table_timing dense_table.cpp)
add_executable(forward_range forward_range.cpp)
#add_executable(gaussian_crf_factor_timing gaussian_crf_factor.cpp)
add_executable(gibbs_sampler_timing gibbs_sampler_timing.cpp)
add_executable(junction_tree_timing junction_tree.cpp)
add_executable(logarithmic_timing logarithmic.cpp)
add_executable(math_random math_random.cpp)
add_executable(moment_gaussian_mle moment_gaussian_mle.cpp)
add_executable(serialization_timing serialization_timing.cpp)
add_executable(serialization_experiment serialization_experiment.cpp)
#add_executable(sparse_linear_algebra sparse_linear_algebra.cpp)
add_executable(table_factor_timing table_factor.cpp)
#commented out until we clean up the stl_io stuff
#add_executable(triangulation triangulation.cpp)
add_executable(variant_vs_int variant_vs_int.cpp)
add_executable(virtual_function virtual_function.cpp)
