add_executable(assignment assignment.cpp)
add_executable(bounded_domain bounded_domain.cpp)
add_executable(domain domain.cpp)
add_executable(variable variable.cpp)
add_executable(variable_type_group variable_type_group.cpp)
add_executable(process process.cpp)

add_test(assignment assignment)
add_test(bounded_domain bounded_domain)
add_test(domain domain)
add_test(variable variable)
add_test(process process)
