if (WIN32)
  add_definitions(-D__USE_W32_SOCKETS -D_WIN32_WINNT=0x0501)
  link_libraries(ws2_32 mswsock)
endif(WIN32)

add_executable(test_pairwise_averaging test_pairwise_averaging.cpp)
add_executable(test_pushsum_averaging test_pushsum_averaging.cpp)
add_executable(test_list_averaging test_list_averaging.cpp)
add_executable(string_server string_server.cpp)
add_executable(string_client string_client.cpp)
add_executable(check_port check_port.cpp)
add_executable(bandwidth_test_server bandwidth_test_server.cpp)
add_executable(bandwidth_test_client bandwidth_test_client.cpp)
add_executable(bandwidth_sort bandwidth_sort.cpp)

if (HAVE_Chord)
  include_directories(${Chord_INCLUDE_DIRS})
  link_libraries(${Chord_LIBRARIES})
  add_executable(chord_lookup chord_lookup.cpp)
  add_executable(parallel_chord_lookup parallel_chord_lookup.cpp)
  add_executable(chord_predecessor chord_predecessor.cpp)
  add_executable(test_chord_random_host test_chord_random_host.cpp)
  add_executable(test_chord_pairwise_averaging test_chord_pairwise_averaging.cpp)
  add_executable(test_chord_averaging test_chord_averaging.cpp)
endif (HAVE_Chord)
