subdirs(random)

add_executable(decomposable_fragment decomposable_fragment.cpp)
add_executable(gaussian_crf_factor_test gaussian_crf_factor_test.cpp)
add_executable(gaussian_factors gaussian_factors.cpp)
add_executable(gaussian_sampling_test gaussian_sampling_test.cpp)
add_executable(mixture mixture.cpp)
add_executable(table_factor table_factor.cpp)
add_executable(nonlinear_gaussian nonlinear_gaussian.cpp)

add_test(decomposable_fragment decomposable_fragment)
add_test(gaussian_factors gaussian_factors)
add_test(mixture mixture)
add_test(nonlinear_gaussian nonlinear_gaussian)
add_test(table_factor table_factor)
