subdirs(random)

add_executable(commutative_semiring commutative_semiring.cpp)
add_executable(decomposable_fragment decomposable_fragment.cpp)
add_executable(gaussian_crf_factor gaussian_crf_factor.cpp)
add_executable(gaussian_factors gaussian_factors.cpp)
add_executable(gaussian_sampling gaussian_sampling.cpp)
add_executable(hybrid hybrid.cpp)
add_executable(mixture mixture.cpp)
add_executable(nonlinear_gaussian nonlinear_gaussian.cpp)
add_executable(table_factor table_factor.cpp)

add_test(commutative_semiring commutative_semiring)
add_test(decomposable_fragment decomposable_fragment)
add_test(gaussian_factors gaussian_factors)
add_test(hybrid hybrid)
add_test(mixture mixture)
add_test(nonlinear_gaussian nonlinear_gaussian)
add_test(table_factor table_factor)
