add_executable(bayes_markov_graph bayes_markov_graph.cpp)
add_executable(bayes_markov_model bayes_markov_model.cpp)
add_executable(cluster_graph cluster_graph.cpp)
#add_executable(cluster_graph_model cluster_graph_model.cpp)
add_executable(crf_graph_test crf_graph_test.cpp)
add_executable(crf_model_test crf_model_test.cpp)
add_executable(decomposable decomposable.cpp)
add_executable(decomposable_sampling_test decomposable_sampling_test.cpp)
add_executable(factor_graph_model factor_graph_model.cpp)
#add_executable(factor_list_model factor_list_model.cpp)
add_executable(learnt_decomposable learnt_decomposable.cpp)
add_executable(learnt_junction_tree learnt_junction_tree.cpp)
add_executable(random random.cpp)
