
# UNCOMMENT THESE ONCE ARMA TYPES ARE SUPPORTED FOR OPTIMIZATION
#add_executable(conjugate_gradient_test conjugate_gradient_test.cpp)
#add_executable(gradient_descent_test gradient_descent_test.cpp)
#add_executable(lbfgs_test lbfgs_test.cpp)
#add_executable(stochastic_gradient_test stochastic_gradient_test.cpp)
