add_library(prl-base
  process
  universe
  variable
  variables
  assignment
  finite_variable
  finite_assignment_iterator
  string_functions
  vector_variable
  vector_assignment
  ../serialization/iarchive #Base needs reorganization!!!
  ../serialization/oarchive #Base needs reorganization!!!
  )
