add_executable(alternating_crf_factor_functor alternating_crf_factor_functor.cpp)
add_executable(alternating_factor_functor alternating_factor_functor.cpp)
add_executable(random_mixture_crf_factor_functor random_mixture_crf_factor_functor.cpp)
add_executable(random_mixture_functor random_mixture_functor.cpp)
add_executable(random_moment_gaussian_functor random_moment_gaussian_functor.cpp)
add_executable(random_table_factor_functor random_table_factor_functor.cpp)
add_executable(random_table_crf_factor_functor random_table_crf_factor_functor.cpp)
