#add_executable(basic_state_manager basic_state_manager.cpp)

#add_executable(denoise denoise.cpp)
#target_link_libraries(denoise jpeg tcmalloc)

# add_executable(denoise_avg denoise_avg.cpp)
# target_link_libraries(denoise_avg jpeg tcmalloc)

#add_executable(para_markov_logic markov_logic.cpp)
# add_executable(markov_logic2 markov_logic2.cpp)

#add_executable(basic_update_rule basic_update_rule.cpp)

#add_executable(parallel_bp parallel_bp.cpp)
#target_link_libraries(parallel_bp metis tcmalloc)
